[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doppler_colab"
version = "0.3.1"
description = "Inject Doppler secrets as environment variables into your Python application during local development with debugging support for PyCharm and Visual Studio Code."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Doppler", email = "support@doppler.com"}]
keywords = ["doppler", "environment variables", "app secrets", "app config", "os.environ"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "httpx"
]

[project.urls]
"Bug Reports" = "https://github.com/dopplerhq/python-doppler-env/issues"
"Source" = "https://github.com/dopplerhq/python-doppler-env"

[project.optional-dependencies]
dev = ["check-manifest"]
test = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["doppler_colab"]

[tool.black]
skip-string-normalization = true
line-length = 120
