[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doppler_colab"
version = "0.4.0"
description = "Seamlessly and securely inject Doppler secrets into Google Colab notebook environments."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Jordan Haisley", email = "jordan@jordanhaisley.me"},
    {name = "Doppler", email = "support@doppler.com"},
]
keywords = ["doppler", "google colab", "jupyter", "notebook", "secrets management", "environment variables"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.24"
]

[project.urls]
"Bug Reports" = "https://github.com/jhaisley/python-doppler-env/issues"
"Source" = "https://github.com/jhaisley/python-doppler-env"

[project.optional-dependencies]
dev = ["check-manifest", "ruff"]
test = ["pytest", "respx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
